<resources>
    <string name="app_name">SignupExample</string>
    <string name="title_signup">Sign up</string>
    <string name="title_confirmation">Confirmation</string>

    <string name="hint_name">Your Name</string>
    <string name="hint_email">Your E-mail Address</string>
    <string name="hint_birthday">Your Birthday dd.mm.yyyy</string>

    <string name="label_register">Sign up</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>

    <string name="msg_is_required">It is required.</string>
    <string name="msg_email_invalid">This email is invalid.</string>
    <string name="msg_date_invalid">The date must be between 01.01.1900 – 31.12.2019.</string>
    <string name="msg_submission_failed">Unfortunately this email already exists.</string>

    <string name="hero_text_successful">Thank you for the registration</string>
    <string name="hero_text_failure">An error occurred</string>
</resources>
